--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,9 @@
 spring.application.name=springEssentials
 server.error.include-stacktrace= ON_PARAM
+
+
+spring.datasource.url=jdbc:mysql://localhost:3306/anime?useSSL=false&createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=root
+
+spring.jpa.hibernate.ddl-auto=update
