--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 spring.application.name=springEssentials
 server.error.include-stacktrace= ON_PARAM
 
-spring.datasource.url=jdbc:mysql://localhost:3306/anime?useSSL=false&createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/anime?useSSL=false&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=root
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+
 
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
