--- a/spring-boot-46-documentacao-com-springdoc-openAPI/springEssentials2/src/main/resources/application.properties
+++ b/spring-boot-46-documentacao-com-springdoc-openAPI/springEssentials2/src/main/resources/application.properties
@@ -6,5 +6,10 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 
+# Configuração do nível de log para Spring Security
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.security.web.authentication=DEBUG
+logging.level.org.springframework.security.web.access=DEBUG
+
 
 spring.jpa.hibernate.ddl-auto=update
