--- a/spring-boot-49-monitorando-aplicacao-com-prometheus/springEssentials2/src/main/resources/application.properties
+++ b/spring-boot-49-monitorando-aplicacao-com-prometheus/springEssentials2/src/main/resources/application.properties
@@ -13,11 +13,11 @@ logging.level.org.springframework.security.web.access=DEBUG
 
 spring.jpa.hibernate.ddl-auto=update
 
-management.endpoints.web.exposure.include=info, health, metrics
+management.endpoints.web.exposure.include=info, health, metrics, prometheus
 management.info.env.enabled=true
 
 # Informações personalizadas para o endpoint /actuator/info
-info.app.name=Spring Boot 2 Essentials
+info.app.name=Spring Boot 2 Essentials 
 info.app.description=API curso DevDojo
 info.website.url=https://devdojo.academy
 info.github.url=https://github.com/educoelho03
