--- a/spring-boot-49-monitorando-aplicacao-com-prometheus/springEssentials2/pom.xml
+++ b/spring-boot-49-monitorando-aplicacao-com-prometheus/springEssentials2/pom.xml
@@ -64,6 +64,11 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-registry-prometheus</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>8.0.33</version>
