--- a/spring-boot-51-criando-imagem-com-jib/springEssentials2/src/main/resources/application.properties
+++ b/spring-boot-51-criando-imagem-com-jib/springEssentials2/src/main/resources/application.properties
@@ -1,11 +1,10 @@
 spring.application.name=springEssentials
 server.error.include-stacktrace= ON_PARAM
 
-# spring.datasource.url=jdbc:mysql://localhost:3306/anime?&createDatabaseIfNotExist=true
 spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${DATABASE_USERNAME}
 spring.datasource.password=${DATABASE_PASSWORD}
-spring.datasource.driverClassName=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # Configuração do nível de log para Spring Security
 logging.level.org.springframework.security=DEBUG
