--- a/spring-boot-51-criando-imagem-com-jib/springEssentials2/pom.xml
+++ b/spring-boot-51-criando-imagem-com-jib/springEssentials2/pom.xml
@@ -75,9 +75,9 @@
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.postgresql</groupId>
-			<artifactId>postgresql</artifactId>
-			<version>42.7.3</version>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.33</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
