--- a/spring-boot-deploy/springEssentials2/src/main/resources/application.properties
+++ b/spring-boot-deploy/springEssentials2/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=springEssentials
 server.error.include-stacktrace= ON_PARAM
 
-spring.datasource.url=${DATABASE_URL}
-spring.datasource.username=${DATABASE_USERNAME}
-spring.datasource.password=${DATABASE_PASSWORD}
+spring.datasource.url=jdbc:postgresql://localhost:5432/springEssentials
+spring.datasource.username=postgres
+spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Configuração do nível de log para Spring Security
